# KabuAI-Daytrade

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  run_backtest_learn.py  run_extra_data.py  run_live_trade.py  run_massive_backtest.py  run_morning_prep.py  run_optimize.py  run_overnight_scan.py  run_paper.py  run_paper_learn.py  run_premarket_all.py  run_ui.sh
analytics/: daily_report.py  feedback_packet.py  knowledge_extractor.py  learning_loop.py  trade_analyzer.py
brokers/: base.py  paper.py  tachibana.py
core/: config.py  event_bus.py  models.py  safety.py  ticker_map.py
data_sources/: event_intelligence.py  jquants.py  market_data.py  novaquity_client.py  tdnet.py  yahoo_finance.py  yahoo_ranking.py
db/: database.py
execution/: engine.py  risk_manager.py
knowledge/: auto_tuning.json  backtest_summary.json  extra_data.json  feedback_packet.json  feedback_summary.md  massive_backtest_results.json  optimization_results.json  overnight_scan.json  paper_learn_results.json  paper_state.json  premarket_scan.json  sector_bias.json
prompts/: prompt1_basic.md  prompt2_extended.md  prompt3_with_plots.md
scanners/: premarket.py  score_engine.py  stock_selector.py  universe.py
strategies/: base.py  registry.py
strategies/event/: catalyst_initial.py  earnings_momentum.py  tdnet_event.py
strategies/gap/: gap_go.py  (+1 more)
tools/: backtest.py  cost_model.py  disclosure_analyzer.py  feature_engineering.py  market_regime.py  pattern_matcher.py  report_generator.py  sector_bias.py  telegram_notify.py  temporal_decay.py
ui/: app.py  theme.py
(+30 files in other folders)
