[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "db",
    "data_sources",
    "brokers",
    "scanners",
    "strategies",
    "execution",
    "analytics",
    "ui",
    "tools",
]

[project]
name = "kabuai-daytrade"
version = "0.1.0"
description = "AI-powered Japanese stock day-trading system"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "aiosqlite>=0.19",
    "aiohttp>=3.9",
    "streamlit>=1.29",
    "plotly>=5.18",
    "scikit-learn>=1.3",
    "ta>=0.11",
    "schedule>=1.2",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
